@@ -1,3 +1,14 @@
+2020-04-30  Alex Christensen  <achristensen@webkit.org>
+
+        REGRESSION: [ iOS ] http/tests/resourceLoadStatistics/standalone-web-application-exempt-from-website-data-deletion tests are flaky crashing, failing an timing out.
+        https://bugs.webkit.org/show_bug.cgi?id=211190
+
+        Reviewed by Chris Dumez.
+
+        * WebKitTestRunner/TestController.cpp:
+        (WTR::TestController::configureWebsiteDataStoreTemporaryDirectories):
+        In tests that swap out the WebsiteDataStore, don't use the same paths as the other WebsiteDataStore.
+
 2020-04-30  David Kilzer  <ddkilzer@apple.com>
 
         REGRESSION (r176862, r210483): Leaks of BrowserWindowController in MiniBrowser/mac/AppDelegate.m
